♻️ refactor: Category Id 가져오는 로직 개선
기존 불필요한 DTO 변환 후 ID 가져오는 방식(ClubConverter.fromClubCategoriesToCategoryInfoListMap 사용)
-> 이제는 불필요한 DTO 변환 하지 않음