@@ -8,7 +8,6 @@ import checkmo.domain.club.entity.ClubCategory;
 import checkmo.domain.club.entity.ClubMember;
 import checkmo.domain.club.repository.ClubRepository;
 import checkmo.domain.club.web.dto.club.ClubResponseDTO;
-import checkmo.global.dto.CategorySharedDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -16,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -56,10 +54,9 @@ public class ClubQueryServiceImpl implements ClubQueryService {
         // 3. 클럽별 멤버 상태 배치 조회
         Map<Long, ClubMember.ClubMemberStatus> statusMap = clubMemberQueryService.getMemberStatuses(memberId, clubIds);
 
-        // 4. 클럽별 카테고리 배치 조회
+        // 4. 클럽별 카테고리 ID 배치 조회
         List<ClubCategory> allClubCategories = clubCategoryQueryService.findCategoriesByClubIds(clubIds);
-
-        var categoriesMap = ClubConverter.fromClubCategoriesToCategoryInfoListMap(allClubCategories);
+        Map<Long, List<Long>> categoryIdMap = ClubConverter.fromClubCategoriesToCategoryIdMap(allClubCategories);
 
         // 5. DTO 변환 (배치 조회 결과 활용)
         return clubs.stream()
@@ -68,10 +65,7 @@ public class ClubQueryServiceImpl implements ClubQueryService {
                     boolean isStaff = status == ClubMember.ClubMemberStatus.STAFF;
                     boolean isMember = status != null;
 
-                    List<Long> categoryIds = categoriesMap.getOrDefault(club.getId(), List.of())
-                            .stream()
-                            .map(CategorySharedDTO.CategoryInfo::getId)
-                            .toList();
+                    List<Long> categoryIds = categoryIdMap.getOrDefault(club.getId(), List.of());
 
                     ClubResponseDTO.ClubDetailDTO clubDetailDTO = ClubConverter.fromClubToClubDetailDTO(club, categoryIds, isStaff);
 
@@ -116,14 +110,12 @@ public class ClubQueryServiceImpl implements ClubQueryService {
             throw new GeneralException(ErrorStatus.CLUB_STAFF_ONLY);
         }
 
-        // 3. 카테고리 DTO
+        // 3. 카테고리 ID 리스트 조회
         List<ClubCategory> clubCategories = clubCategoryQueryService.findCategoriesByClub(clubId);
-
-        var categoryInfoList = ClubConverter.fromClubCategoriesToCategoryInfoList(clubCategories);
-
-        List<Long> categoryIds = categoryInfoList.getCategoryList().stream()
-                .map(CategorySharedDTO.CategoryInfo::getId)
-                .collect(Collectors.toList());
+        
+        List<Long> categoryIds = clubCategories.stream()
+                .map(ClubCategory::getCategoryId)
+                .toList();
 
         // 4. Club 엔티티 + 카테고리 ID 리스트 → DTO 변환
         return ClubConverter.fromClubToClubDetailDTO(club, categoryIds, isStaff);
